@@ -1,3 +1,11 @@
+2009-03-04  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/main_window.py: Added an informative window
+	title (bug #574103).
+	* src/lib/accerciser/prefs_dialog.py: Fixed empty  padding
+	issue (bug #574101)
+	* plugins/script_recorder.py: Port to gtksourceview2 (bug #574100).
+
 2009-02-17  Brad Taylor  <brad@getcoded.net>
 
 	* plugins/interface_view.py: Don't allow the set_range to change the
